--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,6 @@
 /website/i18n
 /website/build
 
-# production
-/dist
-
 # jest
 /coverage
 
@@ -22,3 +19,4 @@ examples/src/index.js
 **/*.d.ts
 
 package-lock.json
+.idea
